--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ header {
     background-color: #f2f2f2; /* light grey */
     text-align: center;
     z-index: 1000;
+    padding: 0;
 }
 #links {
     position: -webkit-sticky;
