--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ header {
     width: 100%;
     background-color: #f2f2f2; /* light grey */
     text-align: center;
-    z-index: 1000;
-    padding: 0;
+    z-index: 100;
+    padding: 1rem 0;
 }
 #links {
     position: -webkit-sticky;
