--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ header {
     width: 100%;
     height: 100px;
     background: center/contain no-repeat rgb(8, 145, 211);
+    /* https://bethwiseman.com/wp-content/uploads/2012/02/TEST-BANNER1.jpg */
     transition: height 0.3s;
     position: relative;
     top: 0px; /* adjust the top position as needed */
