--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 header {
     width: 100%;
-    background-color: #f2f2f2; /* light grey */
+    /*background-color: #f2f2f2;*/ /* light grey */
     text-align: center;
     z-index: 100;
     padding: 1rem 0;
