--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ h1 {
 p {
     font-size: 18px; /* smaller paragraph font size */
     text-align: left; /* align to the left */
+    padding-left: 5%;
+    text-indent: 20px; /* Adjust the indent amount as needed */
 }
 
 hr {
