--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ a:visited {
 
 button,
 input[type=submit] {
+    font-weight: bold;
     background-color: rgb(8, 145, 211); /* light blue */
     color: #1565c0; /* dark grey */
     padding: 10px 20px 10px 20px;
