--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,8 @@ a:visited {
 button,
 input[type=submit] {
     font-weight: bold;
-    background-color: rgb(8, 145, 211); /* light blue */
-    color: #1565c0; /* dark grey */
+    background-color: #90caf9;
+    color: #1565c0;
     padding: 10px 20px 10px 20px;
     border: none;
     border-radius: 5px;
@@ -121,5 +121,5 @@ input[type=submit] {
   
 button:hover,
 input[type=submit]:hover {
-    background-color: #90caf9; /* lighter blue on hover */
+    background-color: rgb(8, 145, 211);
 }
